- Updated Api, removed order stuff - Added endpoints - Added logging - Correct datetimes
