# src/main/java/de/fzi/efeu/api/OrderStatusApi.java
@@ -1,149 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.3.1).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package de.fzi.efeu.api;
-
-import java.util.List;
-import java.util.Optional;
-
-import javax.validation.Valid;
-
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.context.request.NativeWebRequest;
-
-import de.fzi.efeu.model.OrderStatus;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2020-07-01T13:33:10.937421600+02:00[Europe/Berlin]")
-
-@Validated
-@Api(value = "orderStatus", description = "the orderStatus API")
-public interface OrderStatusApi {
-
-    default Optional<NativeWebRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    /**
-     * POST /orderStatus/{id}
-     *
-     * @param id efeu ID (required)
-     * @param orderStatus  (optional)
-     * @return Success (status code 200)
-     */
-    @ApiOperation(value = "", nickname = "createOrderStatus", notes = "", response = OrderStatus.class, tags={ "OrderStatus", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = OrderStatus.class) })
-    @RequestMapping(value = "/orderStatus/{id}",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    default ResponseEntity<OrderStatus> createOrderStatus(@ApiParam(value = "efeu ID",required=true) @PathVariable("id") String id,@ApiParam(value = ""  )  @Valid @RequestBody(required = false) OrderStatus orderStatus) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"id\" : \"id\", \"orderState\" : \"New\", \"timestamp\" : \"2000-01-23T04:56:07.000+00:00\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-
-    /**
-     * GET /orderStatus/{id}
-     *
-     * @param id efeu ID (required)
-     * @return Success (status code 200)
-     */
-    @ApiOperation(value = "", nickname = "getOrderStatus", notes = "", response = OrderStatus.class, tags={ "OrderStatus", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = OrderStatus.class) })
-    @RequestMapping(value = "/orderStatus/{id}",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    default ResponseEntity<OrderStatus> getOrderStatus(@ApiParam(value = "efeu ID",required=true) @PathVariable("id") String id) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"id\" : \"id\", \"orderState\" : \"New\", \"timestamp\" : \"2000-01-23T04:56:07.000+00:00\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-
-    /**
-     * GET /orderStatus/
-     *
-     * @return Success (status code 200)
-     */
-    @ApiOperation(value = "", nickname = "getOrderStatusList", notes = "", response = OrderStatus.class, responseContainer = "List", tags={ "OrderStatus", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = OrderStatus.class, responseContainer = "List") })
-    @RequestMapping(value = "/orderStatus/",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    default ResponseEntity<List<OrderStatus>> getOrderStatusList() {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"id\" : \"id\", \"orderState\" : \"New\", \"timestamp\" : \"2000-01-23T04:56:07.000+00:00\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-
-    /**
-     * PUT /orderStatus/{id}
-     *
-     * @param id efeu ID (required)
-     * @param orderStatus  (optional)
-     * @return Success (status code 200)
-     */
-    @ApiOperation(value = "", nickname = "updateOrderStatus", notes = "", response = OrderStatus.class, tags={ "OrderStatus", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = OrderStatus.class) })
-    @RequestMapping(value = "/orderStatus/{id}",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.PUT)
-    default ResponseEntity<OrderStatus> updateOrderStatus(@ApiParam(value = "efeu ID",required=true) @PathVariable("id") String id,@ApiParam(value = ""  )  @Valid @RequestBody(required = false) OrderStatus orderStatus) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"id\" : \"id\", \"orderState\" : \"New\", \"timestamp\" : \"2000-01-23T04:56:07.000+00:00\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-}
